added searchUsers and userExists API
