# docs-swagger/assets/api-docs.json
@@ -14,6 +14,10 @@
    "description": "File/Folder sharing methods"
   },
   {
+   "name": "Apps Management",
+   "description": "Methods for Enabling/Disabling/Retrieving apps"
+  },
+  {
    "name": "User Management",
    "description": "User Creation/Deletion/Updation methods"
   }
@@ -102,7 +106,7 @@
   "/getApps": {
    "get": {
     "tags": [
-     "General"
+     "Apps Management"
     ],
     "description": "Get all the enabled and disbaled apps",
     "summary": "Get all the enabled and disbaled apps",
@@ -318,6 +322,99 @@
       "in": "query",
       "type": "string",
       "format": "password"
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "success",
+      "schema": {
+       "type": "object",
+       "properties": {
+        "status": {
+         "type": "string"
+        }
+       }
+      }
+     }
+    }
+   }
+  },
+  "/deleteUser": {
+   "get": {
+    "tags": [
+     "User Management"
+    ],
+    "description": "Deletes user via the provisioning API",
+    "summary": "Deletes user via the provisioning API",
+    "operationId": "deleteUser",
+    "parameters": [
+     {
+      "name": "username",
+      "description": "username of the user to be deleted",
+      "in": "query",
+      "type": "string"
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "success",
+      "schema": {
+       "type": "object",
+       "properties": {
+        "status": {
+         "type": "string"
+        }
+       }
+      }
+     }
+    }
+   }
+  },
+  "/searchUsers": {
+   "get": {
+    "tags": [
+     "User Management"
+    ],
+    "description": "Searches for users via provisioning API",
+    "summary": "Searches for users via provisioning API",
+    "operationId": "searchUsers",
+    "parameters": [
+     {
+      "name": "username",
+      "description": "username of the user to be searched",
+      "in": "query",
+      "type": "string"
+     }
+    ],
+    "responses": {
+     "200": {
+      "description": "success",
+      "schema": {
+       "type": "object",
+       "properties": {
+        "status": {
+         "type": "string"
+        }
+       }
+      }
+     }
+    }
+   }
+  },
+  "/userExists": {
+   "get": {
+    "tags": [
+     "User Management"
+    ],
+    "description": "Checks a user via provisioning API",
+    "summary": "Checks a user via provisioning API",
+    "operationId": "userExists",
+    "parameters": [
+     {
+      "name": "username",
+      "description": "name of user to be checked",
+      "in": "query",
+      "type": "string"
      }
     ],
     "responses": {
